# PyPomes-SOB

./: README.md  pyproject.toml
src/pypomes_sob/: .ruff.toml  __init__.py  sob_config.py  sob_pomes.py
