[build-system]
requires = [
    "hatchling>=1.29.0"
]
build-backend = "hatchling.build"

[project]
name = "pypomes_sob"
version = "1.2.9"
authors = [
  { name="GT Nunes", email="wisecoder01@gmail.com" }
]
description = "A collection of Python pomes, penyeach (simple object module)"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pypomes_core>=3.1.0",
    "pypomes_db>=2.9.8"
]

[project.urls]
"Homepage" = "https://github.com/TheWiseCoder/PyPomes-SOB"
"Bug Tracker" = "https://github.com/TheWiseCoder/PyPomes-SOB/issues"
